        Managers, there's no reason to show the import or export
        buttons to lower level roles (since the pure xml import/export
        is deprecated).  Conditioned the buttons.

      - Made Silva work with ExtFile once again: we no longer
        configure the filesystem_path in the service_files, but leave
        it to the extfile.ini.

    Bugs Fixed:

      - Set overflow of selects in Kupu toolboxes to hidden, preventing long
        titles from pushing the toolbox wider.

      - Changed the threshold variable in upgrade.py from 500 to 50,
        this may impact speed of upgrades negatively but it seems
        necessary for for instance ExtFile migration, where 500
        objects can become too large for a single commit.

      - Setting the i18n domain for kupu htmlmacros.html to silva so
        toolbox is translated again bug 101706.

      - Changed the 'priority' attribute of the silva:content zcml
        attribute to a float, to support more granular priorities
        (they way it was prior to Silva 2.0 zcml)

      - fixed 101791: problem with Link object as index of a container

      - Fixed the factory function calls for File and Image, which
        still were still called with the spurious 'title' arguments on
        some code paths.

  Silva 2.0.4

    Features Added:
 
      - added 2 feed icons in /globals, see http://feedicons.com

    Bugs Fixed:

      - Image cropping was not shown correctly when after resizing the image
        was resized back to 100% 
    
      - In SilvaDocument2.0.4: When images are scaled in kupu they are
        shown with correct size after a save action. This is accomplished by
        setting width and height attributes on the image. The image itself
        is still cached, but can be refreshed with a force reload in 
        the browser.

      - the properties tool in kupu wasn't functional with 
        SilvaNewsNetwork 2.6 (unreleased)
