@@ -18,8 +18,11 @@ Silva changes
 
     Bugs Fixed:
 
-      - Set overflow of selects in Kupu toolboxes to hidden, preventing long
-        titles from pushing the toolbox wider.
+      - Special characters in titles are escaped in the tocrenderer
+        adapter, to play nice with xslt rendering.
+
+      - Set overflow of selects in Kupu toolboxes to hidden,
+        preventing long titles from pushing the toolbox wider.
 
       - Changed the threshold variable in upgrade.py from 500 to 50,
         this may impact speed of upgrades negatively but it seems
